# crawler

./: .env.sample  Cargo.toml  README.md
src/: main.rs  scraper.rs
src/utils/: mod.rs  types.rs  worker.rs
