[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
clap = { version = "4.5.13", features = ["derive"] }
dotenv = "0.15.0"
scc = "2.1.11"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
