[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = [
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "json",
] }
async-channel = "2.3.1"
clap = { version = "4.5.13", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
scraper = "0.20.0"
serde_json = "1.0.124"
serde = { version = "1.0.206", features = ["derive"] }
struson = { version = "0.5.0", features = ["serde"] }
